--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
         "malhal/laravel-geographical": "^1.0",
+        "spatie/laravel-permission": "^6.4",
         "tucker-eric/eloquentfilter": "^3.2"
     },
     "require-dev": {
